Resolve Comic Sans font display issue on Mobile Chrome

--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: 'Comic Neue', cursive, sans-serif;
 }
 
 #start {
